src/objects/BRNSHRK__BrainsharkPresentation__c.object
<CustomObject>
    <fields>
        <fullName>BRNSHRK__AuthorEmail__c</fullName>
        <label>Author Email Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__AuthorFirstName__c</fullName>
        <label>Author First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__AuthorLastName__c</fullName>
        <label>Author Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Author_CRMID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Author CRM ID</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Brainshark Presentations</relationshipLabel>
        <relationshipName>R00N50000001ICv4EAG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__BrainsharkAuthorId__c</fullName>
        <label>Author Id</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__BrainsharkCreated__c</fullName>
        <description>Used for data synchronization puposes. Do not manually update this field.</description>
        <label>Created in Brainshark</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__BrainsharkLastUpdated__c</fullName>
        <description>Used for data synchronization puposes. Do not manually update this field.</description>
        <label>Last Updated in Brainshark</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Duration__c</fullName>
        <label>Duration</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__EmailTemplate__c</fullName>
        <label>Email Template</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__IntegrationKey__c</fullName>
        <label>Integration Key</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__NumberOfSlides__c</fullName>
        <label>Number Of Slides</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Pid__c</fullName>
        <label>ID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__PresentationURL__c</fullName>
        <label>Presentation URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__RelatedProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>BrainsharkPresentations</relationshipLabel>
        <relationshipName>R00N50000001I5g2EAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__ShortName__c</fullName>
        <label>Short Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Sub_Type__c</fullName>
        <label>Type2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BRNSHRK__Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Intro</fullName>
                </value>
                <value>
                    <fullName>Testimonial</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Proposal</fullName>
                </value>
                <value>
                    <fullName>Champion Letter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRNSHRK__Topic__c</fullName>
        <label>Topic</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Champion Letter</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Proposal</fullName>
                </value>
                <value>
                    <fullName>Testimonial</fullName>
                </value>
                <value>
                    <fullName>Sample - Marketing Productivity</fullName>
                </value>
                <value>
                    <fullName>Sample - Readiness</fullName>
                </value>
                <value>
                    <fullName>Sample - Training</fullName>
                </value>
                <value>
                    <fullName>Sample - Sales Productivity</fullName>
                </value>
                <value>
                    <fullName>Sample - Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRNSHRK__Type__c</fullName>
        <label>Type1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Readiness</fullName>
                </value>
                <value>
                    <fullName>Alignment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Brainshark Presentation</label>
    <listViews>
        <fullName>BRNSHRK__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brainshark Presentations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>